engine/test/electron/scripts/lexer/errors/unterminated_block_comment.e
// ERROR TEST: Unterminated block comment
/* this comment never ends
   more content
   still going
